# painterly

./: README.md  pyproject.toml
examples/: backup.pnt  example1.pnt
grammar/: grammar.ebnf
painterly/: brush.py  brush_context.py  brush_stack.py  command.py  command_processor.py  context.py  grammar.py  indent_parser.py  light.py  lights.py  opengl_context.py  paint.py  painterly.py  path.py  quantity.py  render.py  sampler.py  script_preprocessor.py  script_transformer.py  script_traverser.py  stroke.py  strokes.py
shaders/: brush_fragment.glsl  brush_vertex.glsl  fragment.glsl  pointlight_fragment.glsl  pointlight_vertex.glsl  vertex.glsl
