[tool.poetry]
name = "painterly"
version = "0.1.0"
description = "This is a generative art project that creates paintings in the Gongbi style."
authors = ["David Berthiaume <dberthiaume@g.harvard.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
moderngl = "^5.6.4"
numpy = "^1.22.3"
Pillow = "^9.1.0"
lark = "^1.1.2"
perlin-numpy = {git = "https://github.com/pvigier/perlin-numpy.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
